added arrow down image

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
     background-color: white;
     width: 90%;
     height:85%;
-    padding-top: 0;
+    padding-top: 50px;
     
    
 }
@@ -115,6 +115,7 @@
     margin-top: 10px;
     padding: 10px;
     box-shadow: 5px 10px #334d4d;
+    font-size: 18px;
 }
 .bmi-result img{
     width: 100%;
@@ -122,11 +123,13 @@
 }
 .bmi-input{
 border: 1px solid #669999;
+border-radius: 6px;
 width: 100%;
 height: 35px;
 padding: 10px;
 margin-bottom: 20px;
 margin-top: 10px;
+font-size: 14px;
 }
 .bmi-input-result{
     border: 1px solid #669999;
@@ -135,6 +138,8 @@ margin-top: 10px;
     padding: 10px;
     margin-bottom: 20px;
     margin-top: 10px;
+   border-radius: 6px;
+   font-size: 14px;
     }
 .bmi-input:focus{
     border: 1px solid #334d4d;
@@ -174,6 +179,7 @@ margin-top: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 30px 0px 0px;
 }
 .round-shape{
     border-radius: 100%;
@@ -260,10 +266,25 @@ margin-bottom: 40px;
     width: 100%;
     height: 100%;
 }
+.arrow-down-image{
+    display: none;
+}
 @media only screen and (max-width: 768px){
     .weight-conversion-inner-unit{
         width:100%;   
         
+    }
+    .arrow-down-image{
+        display: inline;
+        width: 30px;
+        height: 30px;
+    }
+    .arrow-down-image img{
+        width: 100%;
+        height: 100%;
+    }
+    .arrow-image{
+        display: none;
     }
     .bmi-section h2{
         font-size: 25px;
@@ -287,13 +308,15 @@ margin-bottom: 40px;
         width: 70%;
         align-self: center;
         margin-right: 0;
+        font-size: 16px;
     }
-   
+    
 }
 /* BMI CALCULATION ENDS*/
 
 body{
     font-family: 'DM Sans', sans-serif;
+    /* padding-top: 100px; */
 }
 
 
@@ -394,7 +417,14 @@ nav ul li:hover::after{
 .header{
     background-color: #334d4d;
    align-items: center;
+   background-color: red;
+   position: fixed;
+   top: 0;
+   width: 100%;
+   z-index: 1000;
+   /* margin-bottom:0px; */
 }
+
 
 #mobileNav{
     display: none ;
@@ -470,14 +500,13 @@ strong{
    display: block;
    justify-content: center;
    margin: 0 auto;
-   margin-top: 40px;
+   padding-top: 40px;
    width: 90%;
 }
 
 .bmi_header{
     text-align: center;
     font-size: 20px;
-    color: red;
     /* font-family: 'Courier New', Courier, monospace; */
     font-weight: 500;
 }
